--- a/index.html
+++ b/index.html
@@ -48,9 +48,11 @@
         </table>
         <br><br><br><br><br><br>
 
-        <video id="background"
+        <!-- <video id="background"
             <source src="images/coding-shorter.mp4" autoplay>
-        </video>
+        </video> -->
+
+        <img id="background" src="images/coding-shorter.png">
 
         <div id="info-bar">
             <h1 class="text">Helene Willits</h1>
