--- a/about-me.html
+++ b/about-me.html
@@ -83,7 +83,8 @@
                                     <li>Focused Work Ethic</li>
                                     <li>Excellent Communication</li>
                                     <li>Strong Teamwork</li>
-                                    <li>Creativity (see my <a href='personal-projects.html'>personal projects</a></li>
+                                    <!-- <li>Creativity (see my <a href='personal-projects.html'>personal projects</a></li> -->
+                                    <li>Creativity (see my <a href='page-under-construction.html'>personal projects</a></li>
                                     <li>Curiosity</li>
                                 </ul>
                             </td>
