--- a/about-me.html
+++ b/about-me.html
@@ -84,7 +84,7 @@
                                     <li>Excellent Communication</li>
                                     <li>Strong Teamwork</li>
                                     <!-- <li>Creativity (see my <a href='personal-projects.html'>personal projects</a></li> -->
-                                    <li>Creativity (see my <a href='page-under-construction.html'>personal projects</a></li>
+                                    <li>Creativity</li>
                                     <li>Curiosity</li>
                                 </ul>
                             </td>
