--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
         </table>
         <br><br><br><br><br><br>
 
-        <!-- <video id="background"
-            <source src="images/coding-shorter.mp4" autoplay>
-        </video> -->
+        <video id="background" autoplay>
+            <source src="images/coding-shorter.mp4">
+        </video>
 
-        <img id="background" src="images/coding-shorter.png">
+<!--         <img id="background" src="images/coding-shorter.png"> -->
 
         <div id="info-bar">
             <h1 class="text">Helene Willits</h1>
