--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </table>
         <br><br><br><br><br><br>
 
-        <video id="background" autoplay>
+        <video id="background" autoplay loop muted>
             <source src="images/coding-shorter.mp4">
         </video>
 
