--- a/page-under-construction.html
+++ b/page-under-construction.html
@@ -40,7 +40,8 @@
         <h1>Sorry</h1>
         <h2>This page is still under construction.</h2>
         <h3>Estimated completion date : December 20th.</h3>
+        <h3>You can access my project pages <a href='https://hwillits.wixsite.com/helenewillits/portfolio'>here</a></h3>
         <br>
-        <h4>until then</h4>
+        <h4>or</h4>
         <button onclick="window.location.href='portfolio.html'">Head Back</button>
         <br><br><br><br><br><hr>
