activate the Athenahacks and SloHacks pages

--- a/portfolio.html
+++ b/portfolio.html
@@ -52,8 +52,8 @@
             <tr>
                 <td class="project" align="center" style="background-image: url('images/slohacks.png'); background-blend-mode: overlay;">
                     <h1 class="project-text">SLO Hacks</h1>
-                    <!-- <button onclick="window.location.href='projects/slo-hacks.html'">View</button> -->
-                    <button onclick="window.location.href='page-under-construction.html'">View</button>
+                    <button onclick="window.location.href='projects/slo-hacks.html'">View</button>
+<!--                     <button onclick="window.location.href='page-under-construction.html'">View</button> -->
                 </td>
                 <td class="project" align="center" style="background-image: url('images/blue.jpg');">
                     <h1 class="project-text">SWE Team Tech</h1>
@@ -62,8 +62,8 @@
                 </td>
                 <td class="project" align="center" style="background-image: url('images/athenahacks.png');">
                     <h1 class="project-text">Athenahacks</h1>
-                    <!-- <button onclick="window.location.href='projects/athenahacks.html'">View</button> -->
-                    <button onclick="window.location.href='page-under-construction.html'">View</button>
+                    <button onclick="window.location.href='projects/athenahacks.html'">View</button>
+<!--                     <button onclick="window.location.href='page-under-construction.html'">View</button> -->
                 </td>
             </tr>
             <tr>
