add GitHub link

--- a/projects/athenahacks.html
+++ b/projects/athenahacks.html
@@ -9,6 +9,9 @@
         <script src='main.js'></script>
         
         <style>
+            body{
+                text-align: center;
+            }
             div{
                 margin: auto;
                 text-align: center;
@@ -68,13 +71,15 @@
                     <p>Beyond the features that we implemented, we conceptualized that the app would use a Google Mas API to allow travel photos to 
                         be mapped and we planned for the trip data to ultimately upload to and auto-populate a Shutterfly photobook.</p>
                 </td>
-                <td>
-                    <video width="130%" muted autoplay>
+                <td width="20%">
+                    <video width="100%" muted autoplay>
                         <source src="../images/athenahacks-presentation.mp4">
                     </video>
                 </td>
             </tr>
         </table>
+        <br><br><br>
+        <button onclick="window.location.href='https://github.com/EmilyGavrilenko/DocuMems'">See Our Code on GitHub</button>
         <br><br><br>
         <div id="footer_pictures">
             <img src="../images/athenahacks01.jpg" height="100%">
