add GitHub link

--- a/projects/slo-hacks.html
+++ b/projects/slo-hacks.html
@@ -82,7 +82,7 @@
                     </td>
                 </tr>
             </table>
-            <table class="project-content-table" cellpadding="20px">
+            <table class="project-content-table" cellpadding="10px">
                 <tr>
                     <td width="50%">
                         <img src="../images/slohacks-app-plan.png" width="100%">
@@ -97,6 +97,8 @@
                     </td>
                 </tr>
             </table>
+            <button onclick="window.location.href='https://github.com/EmilyGavrilenko/AccountaBuddy'">See Our Code on GitHub</button>
+            <br><br><br>
             <div id="footer_pictures">
                 <img src="../images/slohacks01.jpg" height="100%">
                 <img src="../images/slohacks04.jpg" height="100%">
