--- a/projects/slo-hacks.html
+++ b/projects/slo-hacks.html
@@ -77,7 +77,7 @@
                     </td>
                     <td width="40%">
                         <video autoplay loop muted width="100%">
-                            <source src="../images/slohacks-presentation.mp4">
+                            <source src="../images/slohacks-presentation-reduced.mov">
                         </video>
                     </td>
                 </tr>
