--- a/projects/slo-hacks.html
+++ b/projects/slo-hacks.html
@@ -5,7 +5,7 @@
         <title>Helene Willits - SLO Hacks</title>
         <meta name='viewport' content='width=device-width, initial-scale=1'>
         <link rel='stylesheet' href='../css/styles.css'>
-        <link rel='icon' href='images/favicon.ico'>
+        <link rel='icon' href='../images/favicon.ico'>
         <script src='main.js'></script>
         
         <style>
