--- a/page-under-construction.html
+++ b/page-under-construction.html
@@ -39,7 +39,7 @@
         <hr><br><br>
         <h1>Sorry</h1>
         <h2>This page is still under construction.</h2>
-        <h3>Estimated completion date : December 20th.</h3>
+<!--         <h3>Estimated completion date : December 20th.</h3> -->
         <h3>You can access my project pages <a href='https://hwillits.wixsite.com/helenewillits/portfolio'>here</a></h3>
         <br>
         <h4>or</h4>
