test commit. updated one paragraph

--- a/projects/slo-hacks.html
+++ b/projects/slo-hacks.html
@@ -47,6 +47,8 @@
                 <tr>
                     <td><img src="../images/slohacks02.jpg" width="100%"></td>
                     <td class="center-text" width="40%">
+                        <p>SLO Hacks is a 36 hour hackathon hosted by MLH.</p>
+                        <br>
                         <p>Our all-female team developed an app that allows users to increase their productivity by setting personal 
                             goals and betting against themselves. Users gain success points for every challenge that they win. The 
                             money that the user bet against themselves goes to charity for incomplete challenges. In the future, we 
@@ -72,7 +74,7 @@
                         <p>I developed the backend for the android app using <strong>Java</strong> with <strong>Android Studio</strong>. I designed the 
                             stucture of the app, making sure to use proper cohesion when constructing classes and objects.</p>
                         <h2>Frontend Design</h2>
-                        <p>I developed the frontend for features that allow users to choose a charity, view and modify 
+                        <p>I developed the <strong>Front End</strong> for features that allow users to choose a charity, view and modify 
                             their active challenges, and navigate between pages.</p>
                     </td>
                     <td width="40%">
