updated work experience to include aws 2021

--- a/work-experience.html
+++ b/work-experience.html
@@ -59,6 +59,41 @@
             </div>
         </div>
 
+        <div class="internship" style="background-image: url('images/aws_1.jpeg');">
+            <div class="text-area">
+                <h1>Amazon Propel Program Intern</h1>
+                <h3>AWS, Summer 2021</h3>
+                <p>The Amazon Propel Program is designed to elevate opportunities for underrepresented groups in tech. 
+                    I began my internship with a four week software bootcamp. My performance earned me a Summa Cum Laude 
+                    and Magna Cum Laude award from the Seattle chapter. Then I had eight weeks to design and build a 
+                    regression analysis tool that compared the performance of Amazon Lex machine learning models. The tool 
+                    was later put into production and is still used by the team.</p>
+                <h4>Awards</h4>
+                <h5>APP Summa Cum Laude</h5>
+                <p>This award is presented to Amazon Propel Program Interns who graduate APP Boot Camp with distinguished 
+                    honors and exemplify all of Amazon's Leadership Principle. Individuals who receive this award are selected
+                    by The APP Program Team.</p>
+                <h5>APP Magna Cum Laude</h5>
+                <p>This Award is presented to Amazon Propel Program Interns who graduate APP Boot Camp with honors and 
+                    exemplify an Amazon Leadership Principle. I received this award for exemplifying the Amazon Leadership 
+                    Principle of Ownership.</p>
+            </div>
+        </div>
+
+        <div class="internship" style="background-image: url('images/hvac.jpg');">
+            <div class="text-area">
+                <h1>HVAC&R Building Controls Intern</h1>
+                <h3>ACCO Engineered Systems, Summer 2019</h3>
+                <p>As a building controls intern, I documented network structures for automated building equipment on more than
+                    30 commercial projects so that HVAC systems could be monitored and managed remotely. I also programmed the logic and user interface 
+                    for each type of equipment on 3 major projects using ACCO company standards.</p>
+                <p>Alongside my work on controls, I worked on various mechanical systems. I helped to design mechanical room layouts and performed 
+                    water tank sizings, load calculations, and valve sizings. I also participated in several jobsite visits, where I encountered 
+                    mechanical systems firsthand.</p>
+                <p>Programs Used: AutoCAD, Visio, SiteBuilder</p>
+            </div>
+        </div>
+
         <br><hr><br>
 
     </body>
