added work experience from  Amazon 2022

--- a/work-experience.html
+++ b/work-experience.html
@@ -45,19 +45,19 @@
         <h1>Work Experience</h1>
         <br><hr><br><br><br>
 
-        <div class="internship" style="background-image: url('images/hvac.jpg');">
+        <div class="internship" style="background-image: url('images/aws_1.jpeg');">
             <div class="text-area">
-                <h1>HVAC&R Building Controls Intern</h1>
-                <h3>ACCO Engineered Systems, Summer 2019</h3>
-                <p>As a building controls intern, I documented network structures for automated building equipment on more than
-                    30 commercial projects so that HVAC systems could be monitored and managed remotely. I also programmed the logic and user interface 
-                    for each type of equipment on 3 major projects using ACCO company standards.</p>
-                <p>Alongside my work on controls, I worked on various mechanical systems. I helped to design mechanical room layouts and performed 
-                    water tank sizings, load calculations, and valve sizings. I also participated in several jobsite visits, where I encountered 
-                    mechanical systems firsthand.</p>
-                <p>Programs Used: AutoCAD, Visio, SiteBuilder</p>
+                <h1>Software Development Engineer Intern</h1>
+                <h3>AWS, Summer 2022</h3>
+                <p>I delivered a code coverage feature for developer tools that was later moved into production. The project 
+                    largely consisted of understanding the existing code base, using data transformation to extend the current
+                     code coverage tools, and testing my work.</p>
+                <p>I acted quickly to handle problems before they grew, worked iteratively, learned from team expertise, 
+                    supported team efforts, and reinforced the methods taught by Amazon learning programs. I earned a full 
+                    time return offer from this team.</p>
             </div>
         </div>
+        <br><br>
 
         <div class="internship" style="background-image: url('images/aws_1.jpeg');">
             <div class="text-area">
@@ -79,6 +79,7 @@
                     Principle of Ownership.</p>
             </div>
         </div>
+        <br><br>
 
         <div class="internship" style="background-image: url('images/hvac.jpg');">
             <div class="text-area">
