updated the quality of the resume png and updated slohacks description

--- a/projects/slo-hacks.html
+++ b/projects/slo-hacks.html
@@ -50,10 +50,8 @@
                         <p>SLO Hacks is a 36 hour hackathon hosted by MLH.</p>
                         <br>
                         <p>Our all-female team developed an app that allows users to increase their productivity by setting personal 
-                            goals and betting against themselves. Users gain success points for every challenge that they win. The 
-                            money that the user bet against themselves goes to charity for incomplete challenges. In the future, we 
-                            planned to allow users to compete with their friends for the highest success scores, as well as for the 
-                            highest donation rates.</p>
+                            goals and betting against themselves and their friends. Users gain success points for every challenge that they win. 
+                            The money that the user bet against themselves goes to charity for incomplete challenges.</p>
                         <br>
                         <button onclick="window.location.href='https://devpost.com/software/accountabuddy'">See Our Project on DevPost</button>
                         <br><br>
