--- a/projects/slo-hacks.html
+++ b/projects/slo-hacks.html
@@ -76,7 +76,7 @@
                             their active challenges, and navigate between pages.</p>
                     </td>
                     <td width="40%">
-                        <video autoplay loop muted width="100%">
+                        <video autoplay loop muted height="90%" width="90%">
                             <source src="../images/slohacks-presentation-reduced.mov">
                         </video>
                     </td>
@@ -84,7 +84,7 @@
             </table>
             <table class="project-content-table" cellpadding="10px">
                 <tr>
-                    <td width="50%">
+                    <td width="60%">
                         <img src="../images/slohacks-app-plan.png" width="100%">
                     </td>
                     <td>
