--- a/projects/slo-hacks.html
+++ b/projects/slo-hacks.html
@@ -76,7 +76,7 @@
                             their active challenges, and navigate between pages.</p>
                     </td>
                     <td width="40%">
-                        <video autoplay loop muted height="90%" width="90%">
+                        <video autoplay loop muted width="100%">
                             <source src="../images/slohacks-presentation-reduced.mov">
                         </video>
                     </td>
@@ -106,7 +106,6 @@
             </div>
             
             <br><hr><br>
-            
         </div>
     </body>
 </html>
