--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,7 @@
                 <td class="project" align="center" style="background-image: url('images/blue.jpg');">
                     <h1 class="project-text">SWE Team Tech</h1>
                     <!-- <button onclick="window.location.href='projects/swe-team-tech.html'">View</button> -->
-                    <button onclick="window.location.href='page-under-construction.html'">View</button>
+                    <button onclick="window.location.href='projects/swe-team-tech.html'">View</button>
                 </td>
                 <td class="project" align="center" style="background-image: url('images/athenahacks.png');">
                     <h1 class="project-text">Athenahacks</h1>
@@ -86,7 +86,7 @@
 
         </table>
 
-        <br><hr><br>
+        <br><br><hr><br><br><br>
         
     </body>
 </html>
