--- a/about-me.html
+++ b/about-me.html
@@ -78,7 +78,7 @@
                         </tr> 
                         <tr>
                             <td> <!-- Skills -->
-                                <ul>
+                                <ul class="cli">
                                     <li>Ownership</li>
                                     <li>Excellent Communication</li>
                                     <li>Positive Attitude</li>
