--- a/projects/swe-team-tech.html
+++ b/projects/swe-team-tech.html
@@ -37,7 +37,7 @@
 
         <br><br>
         <h1>Team Tech with Boeing</h1>
-        <h2>Society of Women Engineers</h2>
+        <h2 class="center-text">Society of Women Engineers</h2>
         <br><hr><br><br><br>
 
         <div>
