spacing in opening paragraph

--- a/projects/swe-team-tech.html
+++ b/projects/swe-team-tech.html
@@ -41,7 +41,7 @@
         <br><hr><br><br><br>
 
         <div>
-            <p>Team Tech is a faction of the Society of Women Engineers that designs and prototypes a product for 
+            <p class="project-content-table">Team Tech is a faction of the Society of Women Engineers that designs and prototypes a product for 
                 industry use. In 2018, Team Tech partnered with Boeing to develop a stowable treadmill for 
                 passengers with Deep Vein Thrombosis, who are at risk of developing blood clots if they are seated
                  for too long in flight. The device doubled as an emergency seat for flight attendants and was 
