update the text size of the about me page

--- a/about-me.html
+++ b/about-me.html
@@ -28,6 +28,9 @@
             text-align: right;
             list-style-type: none;
         }
+        p{
+            font-size: small;
+        }
     </style>
 
     <body>
