adjust font size for list items

--- a/about-me.html
+++ b/about-me.html
@@ -31,6 +31,9 @@
         p{
             font-size: small;
         }
+        ul{
+            font-size: small;
+        }
     </style>
 
     <body>
